Add first use-case

--- a/apps/openflight/backend/config/services.yaml
+++ b/apps/openflight/backend/config/services.yaml
@@ -25,6 +25,8 @@ services:
   # Wire
   CodelyTv\Shared\:
     resource: '../../../../src/Shared'
+  CodelyTv\OpenFlight\:
+    resource: '../../../../src/OpenFlight'
 
   # -- TAGGING --
   CodelyTv\Shared\Infrastructure\Bus\Event\InMemory\InMemorySymfonyEventBus:
